add more status for projects

--- a/PERILS/Dataset/project-names.json
+++ b/PERILS/Dataset/project-names.json
@@ -1,13 +1,15 @@
 {
     "accumulo": false,
-    "ace": false,
-    "activemq": false,
+    "ace": "NoGit",
+    "activemq": "NoJIRA",
     "airavata": false,
-    "allura": false,
+    "allura": "NoJIRA",
     "ambari": false,
-    "ant": false,
+    "ant": "NoJIRA",
+    "ant-antuit": "NoJIRA",
     "ant-antunit": false,
-    "ant-compress": false,
+    "ant-compress": "NoJIRA",
+    "ant-dotent": "NoJIRA",
     "ant-dotnet": false,
     "ant-ivy": false,
     "ant-ivyde": false,
