remove redundant codes

--- a/PERILS/Dataset/project-status.json
+++ b/PERILS/Dataset/project-status.json
@@ -13,9 +13,9 @@
     "ant-dotnet": false,
     "ant-ivy": false,
     "ant-ivyde": true,
-    "ant-props": false,
-    "ant-vss": false,
-    "any23": false,
+    "ant-props": "NoJIRA",
+    "ant-vss": "NoJIRA",
+    "any23": true,
     "apex": false,
     "apr-portable_runtime": false,
     "archiva": false,
