--- a/PERILS/Dataset/project-status.json
+++ b/PERILS/Dataset/project-status.json
@@ -1,22 +1,22 @@
 {
-    "accumulo": false,
+    "accumulo": true,
     "ace": "NoGit",
     "activemq": "NoJIRA",
-    "airavata": false,
+    "airavata": true,
     "allura": "NoJIRA",
-    "ambari": false,
+    "ambari": true,
     "ant": "NoJIRA",
     "ant-antuit": "NoJIRA",
-    "ant-antunit": false,
+    "ant-antunit": "NoJIRA",
     "ant-compress": "NoJIRA",
     "ant-dotent": "NoJIRA",
-    "ant-dotnet": false,
-    "ant-ivy": false,
+    "ant-dotnet": "NoJIRA",
+    "ant-ivy": "NoGit",
     "ant-ivyde": true,
     "ant-props": "NoJIRA",
     "ant-vss": "NoJIRA",
     "any23": true,
-    "apex": false,
+    "apex": true,
     "apr-portable_runtime": false,
     "archiva": false,
     "aries": false,
