Add function for checking if commits are from master branch

--- a/PERILS/Dataset/project-status.json
+++ b/PERILS/Dataset/project-status.json
@@ -42,7 +42,7 @@
     "attic-shindig": false,
     "attic-stratos": false,
     "attic-tuscany": false,
-    "attic-whirr": false,
+    "attic-whirr": true,
     "attic-wink": false,
     "attic-wookie": false,
     "attic-xindice": false,
