find projects that can't be calculated

--- a/PERILS/Dataset/project-status.json
+++ b/PERILS/Dataset/project-status.json
@@ -1,10 +1,10 @@
 {
-    "accumulo": true,
+    "accumulo": false,
     "ace": "NoGit",
     "activemq": "NoJIRA",
-    "airavata": true,
+    "airavata": false,
     "allura": "NoJIRA",
-    "ambari": true,
+    "ambari": false,
     "ant": "NoJIRA",
     "ant-antuit": "NoJIRA",
     "ant-antunit": "NoJIRA",
@@ -12,261 +12,261 @@
     "ant-dotent": "NoJIRA",
     "ant-dotnet": "NoJIRA",
     "ant-ivy": "NoGit",
-    "ant-ivyde": true,
+    "ant-ivyde": false,
     "ant-props": "NoJIRA",
     "ant-vss": "NoJIRA",
-    "any23": true,
-    "apex": true,
-    "apr-portable_runtime": false,
+    "any23": false,
+    "apex": false,
+    "apr-portable_runtime": "NoJIRA",
     "archiva": false,
     "aries": false,
-    "attic-abdera": false,
-    "attic-beehive": false,
+    "attic-abdera": "NoGit",
+    "attic-beehive": "NoGit",
     "attic-click": false,
-    "attic-continuum": false,
+    "attic-continuum": "NoGit",
     "attic-deltacloud": false,
-    "attic-devicemap": false,
-    "attic-directmemory": false,
-    "attic-ecs": false,
-    "attic-esme": false,
-    "attic-etch": false,
-    "attic-excalibur": false,
+    "attic-devicemap": "NoGit",
+    "attic-directmemory": "NoGit",
+    "attic-ecs": "NoJIRA",
+    "attic-esme": "NoGit",
+    "attic-etch": "NoGit",
+    "attic-excalibur": "NoGit",
     "attic-harmony": false,
-    "attic-hivemind": false,
-    "attic-jakarta_cactus": false,
-    "attic-lenya": false,
+    "attic-hivemind": "NoGit",
+    "attic-jakarta_cactus": "NoGit",
+    "attic-lenya": "NoJIRA",
     "attic-mrunit": false,
-    "attic-oro": false,
-    "attic-regexp": false,
-    "attic-shale": false,
-    "attic-shindig": false,
+    "attic-oro": "NoJIRA",
+    "attic-regexp": "NoJIRA",
+    "attic-shale": "NoJIRA",
+    "attic-shindig": "NoGit",
     "attic-stratos": false,
     "attic-tuscany": false,
-    "attic-whirr": true,
+    "attic-whirr": false,
     "attic-wink": false,
     "attic-wookie": false,
-    "attic-xindice": false,
-    "attic-xmlbeans": false,
+    "attic-xindice": "NoJIRA",
+    "attic-xmlbeans": "NoGit",
     "avro": false,
-    "axis-axis2": false,
-    "axis-sandesha2": false,
-    "beam": false,
+    "axis-axis2": "NoGit",
+    "axis-sandesha2": "NoGit",
+    "beam": "NoGit",
     "bigtop": false,
-    "bloodhound": false,
+    "bloodhound": "NoJIRA",
     "bookkeeper": false,
     "brooklyn": false,
     "buildr": false,
     "bval": false,
     "calcite": false,
-    "camel": false,
+    "camel": "NoJIRA",
     "cassandra": false,
-    "cayenne": false,
-    "celix": false,
+    "cayenne": "NoGit",
+    "celix": "NoGit",
     "chemistry": false,
     "chukwa": false,
     "clerezza": false,
     "climate-open_workbench": false,
     "cloudstack": false,
-    "cocoon": false,
-    "commons-bcel": false,
+    "cocoon": "NoGit",
+    "commons-bcel": "NoGit",
     "commons-beanutils": false,
-    "commons-bsf": false,
-    "commons-chain": false,
-    "commons-cli": false,
-    "commons-codec": false,
-    "commons-collections": false,
+    "commons-bsf": "NoGit",
+    "commons-chain": "NoGit",
+    "commons-cli": "NoGit",
+    "commons-codec": "NoGit",
+    "commons-collections": "NoGit",
     "commons-compress": false,
-    "commons-configuration": false,
-    "commons-daemon": false,
-    "commons-dbcp": false,
-    "commons-dbutils": false,
-    "commons-digester": false,
-    "commons-discovery": false,
-    "commons-el": false,
-    "commons-email": false,
-    "commons-exec": false,
-    "commons-fileupload": false,
-    "commons-functor": false,
-    "commons-io": false,
-    "commons-jci": false,
-    "commons-jcs": false,
-    "commons-jelly": false,
-    "commons-jexl": false,
-    "commons-jxpath": false,
+    "commons-configuration": "NoGit",
+    "commons-daemon": "NoGit",
+    "commons-dbcp": "NoGit",
+    "commons-dbutils": "NoGit",
+    "commons-digester": "NoGit",
+    "commons-discovery": "NoGit",
+    "commons-el": "NoGit",
+    "commons-email": "NoGit",
+    "commons-exec": "NoGit",
+    "commons-fileupload": "NoGit",
+    "commons-functor": "NoGit",
+    "commons-io": "NoGit",
+    "commons-jci": "NoGit",
+    "commons-jcs": "NoGit",
+    "commons-jelly": "NoGit",
+    "commons-jexl": "NoGit",
+    "commons-jxpath": "NoGit",
     "commons-lang": false,
-    "commons-launcher": false,
-    "commons-logging": false,
+    "commons-launcher": "NoGit",
+    "commons-logging": "NoGit",
     "commons-math": false,
-    "commons-modeler": false,
-    "commons-net": false,
-    "commons-ognl": false,
-    "commons-pool": false,
-    "commons-proxy": false,
+    "commons-modeler": "NoGit",
+    "commons-net": "NoGit",
+    "commons-ognl": "NoGit",
+    "commons-pool": "NoGit",
+    "commons-proxy": "NoGit",
     "commons-rng": false,
     "commons-scxml": false,
-    "commons-validator": false,
-    "commons-vfs": false,
-    "commons-weaver": false,
-    "community-development": false,
-    "cordova": false,
-    "couchdb": false,
-    "creadur-rat": false,
-    "creadur-tentacles": false,
-    "creadur-whisker": false,
+    "commons-validator": "NoJIRA",
+    "commons-vfs": "NoGit",
+    "commons-weaver": "NoGit",
+    "community-development": "NoGit",
+    "cordova": "NoGit",
+    "couchdb": "NoJIRA",
+    "creadur-rat": "NoGit",
+    "creadur-tentacles": "NoJIRA",
+    "creadur-whisker": "NoGit",
     "crunch": false,
     "ctakes": false,
     "curator": false,
     "cxf": false,
-    "db-derby": false,
-    "db-torque": false,
+    "db-derby": "NoGit",
+    "db-torque": "NoGit",
     "deltaspike": false,
-    "directory": false,
+    "directory": "NoGit",
     "directory-fortress": false,
     "directory-kerby": false,
-    "directory-server": false,
-    "directory-studio": false,
+    "directory-server": "NoGit",
+    "directory-studio": "NoGit",
     "drill": false,
-    "empire-db": false,
+    "empire-db": "NoGit",
     "falcon": false,
-    "felix": false,
+    "felix": "NoGit",
     "flex": false,
     "flink": false,
     "flume": false,
-    "forrest": false,
+    "forrest": "NoJIRA",
     "geronimo": false,
     "giraph": false,
-    "gora": false,
+    "gora": "NoGit",
     "groovy": false,
-    "gump": false,
+    "gump": "NoGit",
     "hadoop": false,
     "hama": false,
     "hbase": false,
     "helix": false,
     "hive": false,
-    "httpcomponents-client": false,
-    "httpcomponents-commons_httpclient": false,
-    "httpcomponents-core": false,
-    "httpd-http_server": false,
-    "httpd-mod_ftp": false,
-    "ignite": false,
-    "incubator-annotator": false,
+    "httpcomponents-client": "NoGit",
+    "httpcomponents-commons_httpclient": "NoGit",
+    "httpcomponents-core": "NoGit",
+    "httpd-http_server": "NoJIRA",
+    "httpd-mod_ftp": "NoJIRA",
+    "ignite": "NoGit",
+    "incubator-annotator": "NoJIRA",
     "incubator-datafu": false,
     "incubator-edgent": false,
-    "incubator-milagro": false,
-    "incubator-taverna": false,
+    "incubator-milagro": "NoGit",
+    "incubator-taverna": "NoJIRA",
     "isis": false,
-    "jackrabbit": false,
-    "james": false,
+    "jackrabbit": "NoGit",
+    "james": "NoGit",
     "jclouds": false,
     "jena": false,
-    "jmeter": false,
-    "jspwiki": false,
+    "jmeter": "NoJIRA",
+    "jspwiki": "NoJIRA",
     "juddi-scout": false,
     "kafka": false,
     "karaf": false,
     "knox": false,
     "lens": false,
-    "libcloud": false,
-    "logging-chainsaw": false,
-    "logging-log4cxx": false,
-    "logging-log4j": false,
+    "libcloud": "NoGit",
+    "logging-chainsaw": "NoJIRA",
+    "logging-log4cxx": "NoGit",
+    "logging-log4j": "NoJIRA",
     "logging-log4net": false,
-    "logging-log4php": false,
+    "logging-log4php": "NoGit",
     "lucene-core": false,
     "lucene-solr": false,
-    "lucenenet-lucenedotnet": false,
+    "lucenenet-lucenedotnet": "NoGit",
     "lucy": false,
     "mahout": false,
-    "manifoldcf": false,
-    "marmotta": false,
+    "manifoldcf": "NoGit",
+    "marmotta": "NoGit",
     "maven": false,
-    "maven-doxia": false,
-    "mesos": false,
+    "maven-doxia": "NoGit",
+    "mesos": "NoGit",
     "metamodel": false,
-    "mina": false,
+    "mina": "NoGit",
     "mina-ftpserver": false,
     "mina-sshd": false,
     "mina-vysper": false,
     "myfaces": false,
     "myfaces-tobago": false,
     "nutch": false,
-    "ode": false,
-    "ofbiz": false,
-    "olingo": false,
-    "oltu--_parent": false,
-    "oodt": false,
+    "ode": "NoGit",
+    "ofbiz": "NoGit",
+    "olingo": "NoGit",
+    "oltu--_parent": "NoGit",
+    "oodt": "NoGit",
     "oozie": false,
     "openjpa": false,
     "openmeetings": false,
     "opennlp": false,
-    "openoffice": false,
-    "openwebbeans": false,
+    "openoffice": "NoJIRA",
+    "openwebbeans": "NoGit",
     "orc": false,
     "parquet": false,
-    "pdfbox": false,
-    "perl-mod_perl": false,
+    "pdfbox": "NoGit",
+    "perl-mod_perl": "NoJIRA",
     "phoenix": false,
     "pig": false,
-    "pivot": false,
-    "poi": false,
+    "pivot": "NoGit",
+    "poi": "NoJIRA",
     "polygene": false,
-    "portals": false,
-    "qpid": false,
+    "portals": "NoJIRA",
+    "qpid": "NoGit",
     "reef": false,
-    "river": false,
+    "river": "NoGit",
     "roller": false,
     "samza": false,
-    "santuario": false,
+    "santuario": "NoGit",
     "serf": false,
-    "servicemix": false,
+    "servicemix": "NoJIRA",
     "shiro": false,
     "sis-spatial_information_system": false,
-    "sling": false,
-    "spamassassin": false,
-    "spark": false,
+    "sling": "NoJIRA",
+    "spamassassin": "NoJIRA",
+    "spark": "NoGit",
     "sqoop": false,
-    "stanbol": false,
+    "stanbol": "NoGit",
     "steve": false,
     "storm": false,
-    "struts": false,
+    "struts": "NoGit",
     "subversion": false,
-    "synapse": false,
+    "synapse": "NoGit",
     "syncope": false,
     "tajo": false,
     "tapestry": false,
-    "tcl-rivet": false,
-    "tcl-websh": false,
+    "tcl-rivet": "NoJIRA",
+    "tcl-websh": "NoJIRA",
     "tez": false,
     "thrift": false,
     "tika": false,
-    "tiles": false,
-    "tomcat": false,
-    "tomcat-reusable_dialog_components__rdc__taglib": false,
+    "tiles": "NoGit",
+    "tomcat": "NoJIRA",
+    "tomcat-reusable_dialog_components__rdc__taglib": "NoJIRA",
     "tomee": false,
     "trafficserver-traffic_server": false,
-    "turbine": false,
-    "uima": false,
-    "vcl": false,
-    "velocity": false,
-    "velocity-anakia": false,
-    "velocity-dvsl": false,
-    "velocity-texen": false,
-    "velocity-tools": false,
+    "turbine": "NoGit",
+    "uima": "NoGit",
+    "vcl": "NoGit",
+    "velocity": "NoGit",
+    "velocity-anakia": "NoGit",
+    "velocity-dvsl": "NoGit",
+    "velocity-texen": "NoGit",
+    "velocity-tools": "NoGit",
     "vxquery": false,
-    "webservices-axiom": false,
-    "webservices-woden": false,
+    "webservices-axiom": "NoGit",
+    "webservices-woden": "NoGit",
     "whimsy": false,
     "wicket": false,
-    "xalan-for_c++_xslt_processor": false,
-    "xalan-for_java_xslt_processor": false,
-    "xerces-for_c++_xml_parser": false,
-    "xerces-for_java_xml_parser": false,
-    "xerces-for_perl_xml_parser": false,
-    "xerces-xml_commons_external": false,
-    "xerces-xml_commons_resolver": false,
-    "xmlgraphics-batik": false,
-    "xmlgraphics-fop": false,
-    "xmlgraphics-xml_graphics_commons": false,
+    "xalan-for_c++_xslt_processor": "NoGit",
+    "xalan-for_java_xslt_processor": "NoGit",
+    "xerces-for_c++_xml_parser": "NoGit",
+    "xerces-for_java_xml_parser": "NoGit",
+    "xerces-for_perl_xml_parser": "NoGit",
+    "xerces-xml_commons_external": "NoGit",
+    "xerces-xml_commons_resolver": "NoGit",
+    "xmlgraphics-batik": "NoGit",
+    "xmlgraphics-fop": "NoGit",
+    "xmlgraphics-xml_graphics_commons": "NoGit",
     "yetus": false,
     "zeppelin": false,
     "zookeeper": false
